2011-11-09  Eric Seidel  <eric@webkit.org>

        Remove more platform-dependent unittests
        https://bugs.webkit.org/show_bug.cgi?id=71971

        Reviewed by Adam Barth.

        Tests which only run on a couple platforms will break.
        All tests should run on all platforms where possible.

        * Scripts/webkitpy/layout_tests/port/chromium_gpu_unittest.py:
        * Scripts/webkitpy/layout_tests/port/chromium_win_unittest.py:
        * Scripts/webkitpy/layout_tests/port/config_unittest.py:
        * Scripts/webkitpy/layout_tests/port/factory_unittest.py:

2011-11-09  Ojan Vafai  <ojan@chromium.org>

        Merge in results to the test results server even if build numbers conflict
        https://bugs.webkit.org/show_bug.cgi?id=71967

        Reviewed by Tony Chang.

        This was initially meant to be a sanity check that we don't
        enter duplicate runs, but it turns out that we can reasonably get
        in these situations when a builder is clobbered (e.g. the build
        numbers start over again from 0).

        * TestResultServer/model/jsonresults.py:
        * TestResultServer/model/jsonresults_unittest.py:

2011-11-09  Eric Seidel  <eric@webkit.org>

        Remove the concept of platform-dependent unittests
        https://bugs.webkit.org/show_bug.cgi?id=71963

        Reviewed by Adam Barth.

        These have been the source of never-ending sadness.
        We'd change behavior and forget to update results in
        some unittests because they were only run on certain platforms.
        This change removes a large source of these platform-dependent
        unittests, which was caused by the port_maker stuff.

        It's possible that this change will break test-webkitpy
        on some platforms, but that will be a one-time cost.
        I will fix the breakage by removing the platform-dependantness
        of any such broken tests.

        * Scripts/webkitpy/layout_tests/port/base_unittest.py: