@@ -27,17 +27,19 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 import unittest
-from webkitpy.common.config.committers import CommitterList, Contributor, Committer, Reviewer
+from webkitpy.common.config.committers import Account, CommitterList, Contributor, Committer, Reviewer
 
 class CommittersTest(unittest.TestCase):
     def test_committer_lookup(self):
+        account = Account('Test Zero', ['zero@test.com', 'zero@gmail.com'], 'zero')
         committer = Committer('Test One', 'one@test.com', 'one')
         reviewer = Reviewer('Test Two', ['two@test.com', 'Two@rad.com', 'so_two@gmail.com'])
         contributor = Contributor('Test Three', ['Three@test.com'], 'three')
         contributor_with_two_nicknames = Contributor('Other Four', ['otherfour@webkit.org'], ['four', 'otherfour'])
-        committer_list = CommitterList(committers=[committer], reviewers=[reviewer], contributors=[contributor, contributor_with_two_nicknames])
+        committer_list = CommitterList(watchers=[account], committers=[committer], reviewers=[reviewer], contributors=[contributor, contributor_with_two_nicknames])
 
         # Test valid committer, reviewer and contributor lookup
+        self.assertEqual(committer_list.account_by_email('zero@test.com'), account)
         self.assertEqual(committer_list.committer_by_email('one@test.com'), committer)
         self.assertEqual(committer_list.reviewer_by_email('two@test.com'), reviewer)
         self.assertEqual(committer_list.committer_by_email('two@test.com'), reviewer)
@@ -53,6 +55,14 @@ class CommittersTest(unittest.TestCase):
 
         # Test that the first email is assumed to be the Bugzilla email address (for now)
         self.assertEqual(committer_list.committer_by_email('two@rad.com').bugzilla_email(), 'two@test.com')
+
+        # Test lookup by login email address
+        self.assertEqual(committer_list.account_by_login('zero@test.com'), account)
+        self.assertEqual(committer_list.account_by_login('zero@gmail.com'), None)
+        self.assertEqual(committer_list.account_by_login('one@test.com'), committer)
+        self.assertEqual(committer_list.account_by_login('two@test.com'), reviewer)
+        self.assertEqual(committer_list.account_by_login('Two@rad.com'), None)
+        self.assertEqual(committer_list.account_by_login('so_two@gmail.com'), None)
 
         # Test that a known committer is not returned during reviewer lookup
         self.assertEqual(committer_list.reviewer_by_email('one@test.com'), None)
